projects/asw-order-manager/kubernetes/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordermanager
      service: zookeeper
  template: 
    metadata:
      labels:
        app: ordermanager
        service: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper
        ports:
        - containerPort: 2181

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordermanager
      service: kafka
  template: 
    metadata:
      labels:
        app: ordermanager
        service: kafka
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:latest
        ports:
        - containerPort: 9092
         
---
kind: Service
apiVersion: v1
metadata:
  name: zookeeper
spec:
  selector:
    app: ordermanager
    service: zookeeper
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181

---
kind: Service
apiVersion: v1
metadata:
  name: kafka
spec:
  selector:
    app: ordermanager
    service: kafka
  type: NodePort
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
