projects/asw-order-manager/kubernetes/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-db
spec:
  selector:
    matchLabels:
      app: ordermanager
      service: orderservice
      database: orderservice
  template:
    metadata:
      labels:
        app: ordermanager
        service: orderservice
        database: orderservice
    spec:
      volumes:
        - name: order-service-storage
          persistentVolumeClaim:
            claimName: order-service-pv-claim
      containers:
        - image: postgres
          name: order-service-db
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: order-service-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: order-service-db
