projects/asw-order-manager/kubernetes/order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  selector:
    app: orderservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordermanager
      service: orderservice
  template:
    metadata:
      labels:
        app: ordermanager
        service: orderservice
    spec:
      containers:
        - name: order-container
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
          image: ghcr.io/buonhobo/asw-order-service
          ports:
            - containerPort: 8080
