projects/asw-order-manager/kubernetes/product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice
spec:
  selector:
    app: productservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordermanager
      service: productservice
  template:
    metadata:
      labels:
        app: ordermanager
        service: productservice
    spec:
      containers:
        - name: productservice
          image: ghcr.io/buonhobo/asw-product-service
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
          ports:
            - containerPort: 8080
